# shapefiles

./: .gitignore  .gitmodules  README.md  augment.py  census-dl.txt  census.sh  fips.csv  fips.json  main.py  mapping_extractor.py  office_abbreviations.json  openelections.py  pa_old_merge.py  pyproject.toml  test_openelections.py
drafts/: PA-adams-progress.json  PA-allegheny-progress.json  PA-armstrong-progress.json  PA-beaver-progress.json  PA-bedford-progress.json  PA-berks-progress.json  PA-blair-progress.json  PA-bradford-progress.json  PA-bucks-progress.json  PA-butler-progress.json  PA-cambria-progress.json  PA-cameron-progress.json  PA-carbon-progress.json  PA-centre-progress.json  PA-chester-progress.json  PA-clarion-progress.json  PA-clearfield-progress.json  PA-clinton-progress.json  PA-columbia-progress.json  PA-crawford-progress.json  PA-cumberland-progress.json  PA-dauphin-progress.json  PA-delaware-progress.json  PA-elk-progress.json  PA-erie-progress.json  PA-fayette-progress.json  PA-forest-progress.json  PA-franklin-progress.json  PA-fulton-progress.json  PA-greene-progress.json  PA-huntingdon-progress.json  PA-indiana-progress.json  PA-jefferson-progress.json  PA-juniata-progress.json  PA-lackawanna-progress.json  PA-lancaster-progress.json  PA-lawrence-progress.json  PA-lebanon-progress.json  PA-lehigh-progress.json  PA-luzerne-progress.json  (+28 more)
scripts/: az_cleanup.py  pa_old_merge.py
tools/: merge.py
